[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ANCLab"
version = "0.0.1"
authors = [
  { name="Sajil C. K.", email="sajilck@gmail.com" },
]
description = "A Python package for simulating Active Noise Control (ANC) experiments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cksajil/AcousticsLab"
"Bug Tracker" = "https://github.com/cksajil/AcousticsLab/issues"